DevOps/demo/prisma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: prisma-demo
  name: prisma-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prisma-demo
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: prisma-demo
    spec:
      containers:
        - env:
            - name: PRISMA_CONFIG
              value: |
                port: 4466
                databases:
                  default:
                    connector: mongo
                    uri: mongodb://192.168.1.101:27017
                    database: schedules-demo
          image: prismagraphql/prisma:1.34
          imagePullPolicy: ''
          name: prisma
          ports:
            - containerPort: 4466
          resources: {}
      restartPolicy: Always
      serviceAccountName: ''
      volumes: null
status: {}
