DevOps/demo/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedules-server-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      id: schedules-server-demo
      type: main
  template:
    metadata:
      labels:
        id: schedules-server-demo
        type: main
    spec:
      containers:
      - image: YOUR_LOCAL_DOCKER_REGISTRY:5000/schedules-server-demo:v0.2.6
        command: ["/bin/sh","-c"]
        args: ["sleep 10 && prisma deploy && npm start"]
        imagePullPolicy: Always
        name: schedules-server-demo
