DevOps/demo/prisma-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: prisma-demo
  name: prisma-demo
spec:
  ports:
    - port: 4466
      protocol: TCP
      targetPort: 4466
  selector:
    io.kompose.service: prisma-demo
