DevOps/demo/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    id: schedules-server-demo
  name: schedules-server-demo
spec:
  ports:
    - name: schedules-server-demo
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    id: schedules-server-demo
