DevOps/demo/ingress-srv2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: schedules-client-demo.k109.ru
    http:
      paths:
        - path: /
          backend:
            serviceName: schedules-client-demo
            servicePort: 80
  - host: schedules-server-demo.k109.ru
    http:
      paths:
        - path: / 
          backend:
            serviceName: schedules-server-demo
            servicePort: 3000
